adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: web-ui
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
spec:
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
  type: LoadBalancer
